--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
 	"name" : "Checkers",
 	"version" : "0.0.1",
+	"description" : "My attempt to implement the game of checkers as a fully-JavaScript-driven web-app.",
+	"main" : "CheckersServer.js",
+	"keywords" : [ "Checkers", "Draughts" ],
 	"dependencies" :
 	{
 		"jsdom" : "9.2.1",
 		"socket.io" : "1.4.6"
+	},
+	"author" : "Spencer T. Parkin",
+	"license" : "MIT",
+	"engines" :
+	{
+		"node" : "6.2.1"
 	}
 }
